--- a/html/news.html
+++ b/html/news.html
@@ -449,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <link rel="stylesheet" type="text/css" href="../css/pagetitle.css">
 <div class="template__title">
-    <div class="pagetitle lazy-back" data-style-sm="background-image: url('images/shutterstock_397011061-2-640x-080.jpeg');" data-style="background-image: url('assets/cache/images/shutterstock_397011061-2-1900x-5b4.jpeg');">
+    <div class="pagetitle lazy-back" data-style-sm="background-image: url('images/123.jpeg');" data-style="background-image: url('/images/123.jpeg');">
         <div class="container">
             <div class="pagetitle__body">
                 <h1 class="pagetitle__title">Металл-Экспо 2025</h1>
@@ -502,7 +502,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="news">
                         <ul class="news__list"><li class="swiper-slide">
     <a class="news__item" href="/novosti/pozdravlenie-s-dnem-metallurga.html" aria-label="Поздравление с Днем металлурга">
-        <img class="news__image lazy-image" src="../images/den_metallurga_tekst-500x300-901.jpg.png " data-src= "../images/den_metallurga_tekst-500x300-901.jpg" alt="">
+        <img class="news__image lazy-image" src="../images/den_metallurga_tekst-500x300-901.jpg.png" data-src= "../images/den_metallurga_tekst-500x300-901.jpg.png" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">Поздравление с Днем металлурга</div>
  <div class="news__date">17.07.2025</div>
@@ -512,7 +512,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
 </li><li class="swiper-slide">
     <a class="news__item" href="/novosti/den-pobedy-2025.html" aria-label="День Победы 2025">
-        <img class="news__image lazy-image" src="../images/9maya_tekst-500x300-684.jpg.png" data-src="assets/cache/images/9maya_tekst-500x300-684.jpg" alt="">
+        <img class="news__image lazy-image" src="../images/9maya_tekst-500x300-684.jpg.png" data-src="../images/9maya_tekst-500x300-684.jpg.png" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">День Победы 2025</div>
  <div class="news__date">08.05.2025</div>
@@ -521,7 +521,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
 </li><li class="swiper-slide">
     <a class="news__item" href="/novosti/s-mezhdunarodnym-zhenskim-dnem.html" aria-label="С Международным женским днем!">
-        <img class="news__image lazy-image" src="../images/8marta_tekst-500x300-f63.jpg.png" data-src="assets/cache/images/8marta_tekst-500x300-f63.jpg" alt="">
+        <img class="news__image lazy-image" src="../images/8marta_tekst-500x300-f63.jpg.png" data-src="../images/8marta_tekst-500x300-f63.jpg.png" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">С Международным женским днем!</div>
  <div class="news__date">06.03.2025</div>
@@ -531,7 +531,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
 </li><li class="swiper-slide">
     <a class="news__item" href="/novosti/s-dnem-zashhitnika-otechestva.html" aria-label="С Днем защитника Отечества!">
-        <img class="news__image lazy-image" src="../images/23fevralya_tekst-500x300-bf4.jpg.png" data-src="assets/cache/images/23fevralya_tekst-500x300-bf4.jpg" alt="">
+        <img class="news__image lazy-image" src="../images/23fevralya_tekst-500x300-bf4.jpg.png" data-src="../images/23fevralya_tekst-500x300-bf4.jpg.png" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">С Днем защитника Отечества!</div>
  <div class="news__date">21.02.2025</div>
@@ -541,7 +541,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
 </li><li class="swiper-slide">
     <a class="news__item" href="/novosti/pozdravlenie-s-kitajskim-novym-godom-2025.html" aria-label="Поздравление с Китайским Новым годом 2025">
-        <img class="news__image lazy-image" src="../images/031d1eb2612e9066511c2d807419f3f8129d1cc4.jpg" data-src="assets/cache/kitaiskii_ng_tekst%281%29-500x300-3e8.png" alt="">
+        <img class="news__image lazy-image" src="../images/031d1eb2612e9066511c2d807419f3f8129d1cc4.jpg" data-src="../images/031d1eb2612e9066511c2d807419f3f8129d1cc4.jpg" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">Поздравление с Китайским Новым годом 2025</div>
  <div class="news__date">29.01.2025</div>
@@ -557,14 +557,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </main>
 
-<section class="products">
-    <h2 class="products__title">НАШИ ТОВАРЫ</h2>
-    <div class="slider">
-        <div class="slider__track" id="sliderTrack">
-
-        </div>
-    </div>
-</section>
 
     <div class="consultation template__section template__section--background">
         <div class="consultation__back lazy-back"></div>
