--- a/html/state.html
+++ b/html/state.html
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <link rel="stylesheet" type="text/css" href="../css/pagetitle.css">
 <div class="template__title">
-    <div class="pagetitle lazy-back" data-style-sm="background-image: url('images/123.jpeg');" data-style="background-image: url('../images/123.jpeg');">
+    <div class="pagetitle lazy-back" data-style-sm="background-image: url('images/123.jpeg');" data-style="background-image: url('/images/123.jpeg');">
         <div class="container">
             <div class="pagetitle__body">
                 <h1 class="pagetitle__title">Бронзовая лента: характеристики, область применения</h1>
@@ -519,7 +519,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="news">
                         <ul class="news__list"><li class="swiper-slide">
     <a class="news__item" href="/stati/bronzovaya-lenta-vidy-osobennosti-proizvodstva-i-primeneniya.html" aria-label="Бронзовая лента. Виды, особенности производства и применения">
-        <img class="news__image lazy-image" src="../images/1f9efbddce711924aff9bbbe18e5a9a372092fc9.jpg" data-src="assets/cache/images/stati/bronzovaya-lenta-500x300-896.jpg" alt="">
+        <img class="news__image lazy-image" src="../images/1f9efbddce711924aff9bbbe18e5a9a372092fc9.jpg" data-src="/images/1f9efbddce711924aff9bbbe18e5a9a372092fc9.jpg" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">Бронзовая лента. Виды, особенности производства и применения</div>
  <div class="news__date">22.09.2021</div>
@@ -528,7 +528,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
 </li><li class="swiper-slide">
     <a class="news__item" href="/stati/bronzovye-lenty-polozhitelnye-kachestva-osobennosti-sostava-i-svojstv-obshirnaya-sfera-primeneniya.html" aria-label="Бронзовые ленты: положительные качества, особенности состава и свойств, обширная сфера применения   ">
-        <img class="news__image lazy-image" src="../images/2ead12c2e4a21cdffad2ea5c81ee7969874c3acc.jpg" data-src="assets/cache/images/stati/lenty-bronza-500x300-896.jpg" alt="">
+        <img class="news__image lazy-image" src="../images/2ead12c2e4a21cdffad2ea5c81ee7969874c3acc.jpg" data-src="/images/2ead12c2e4a21cdffad2ea5c81ee7969874c3acc.jpg" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">Бронзовые ленты: положительные качества, особенности состава и свойств, обширная сфера применения </div>
  <div class="news__date">16.09.2021</div>
@@ -537,7 +537,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </a>
 </li><li class="swiper-slide">
     <a class="news__item" href="/stati/promyshlennoe-ispolzovanie-bronzovoj-lenty.html" aria-label="Промышленное использование бронзовой ленты">
-        <img class="news__image lazy-image" src="../images/9d2f3603fec3770a0566b0fb9460f3b3032c5268.jpg" data-src="assets/cache/images/130_original-500x300-edc.jpeg" alt="">
+        <img class="news__image lazy-image" src="../images/9d2f3603fec3770a0566b0fb9460f3b3032c5268.jpg" data-src="/images/9d2f3603fec3770a0566b0fb9460f3b3032c5268.jpg" alt="">
 		<div class="news__body" style="text-align:left">
  <div class="news__title">Промышленное использование бронзовой ленты</div>
  <div class="news__date">13.08.2021</div>
